post routes done

--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -4,23 +4,7 @@ block content
   div.subheader
     h2 New Book
 
-  form
-    p
-      label(for="title") Title
-      input(type="text" name="title" id="title" value="")
+    include errors
 
-    p
-      label(for="author") Author
-      input(type="text" name="author" id="author" value="")
-
-    p
-      label(for="genre") Genre
-      input(type="text" name="genre" id="genre" value="")
-
-    p
-      label(for="year") Year
-      input(type="text" name="year" id="year" value="")
-
-    p
-      input(type="submit" name="submit" value="Create New Book")
-      a(href="/books") Cancel
+  form(action="/books" method="post")
+    include form
