--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,12 @@ a {
   transition: 0.4s;
 }
 
-  a:hover {
-    color: black;
-  }
+a:hover {
+  color: black;
+}
 
-a.button, input[type=submit] {
+a.button,
+input[type="submit"] {
   color: white;
   background: #019875;
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -24,18 +25,20 @@ a.button, input[type=submit] {
   cursor: pointer;
 }
 
-form a.button, input[type=submit] {
+form a.button,
+input[type="submit"] {
   margin-left: 140px;
   transition: 0.4s;
 }
 
-input[type=submit] {
+input[type="submit"] {
   border: 0;
 }
 
-  a.button:hover, input[type=submit]:hover {
-    background-color: #01b189;
-  }
+a.button:hover,
+input[type="submit"]:hover {
+  background-color: #01b189;
+}
 
 p {
   margin: 20px auto;
@@ -54,7 +57,7 @@ h2 {
 }
 
 th {
-  border-bottom: 2px solid #D8B493;
+  border-bottom: 2px solid #d8b493;
   text-align: left;
   padding: 5px 20px 5px 10px;
 }
@@ -64,7 +67,7 @@ tr {
 }
 
 tr:nth-child(2n) {
-  background: #E7E7E7;
+  background: #e7e7e7;
 }
 
 td {
@@ -83,15 +86,26 @@ input {
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
   font-size: 14px;
   border-radius: 2px;
-  border-color: #E7E7E7;
+  border-color: #e7e7e7;
   transition: 0.4s;
 }
 
-input[type=text] {
+input[type="text"] {
   margin-left: 7px;
   width: 300px;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  border-top: none;
+  border-bottom: 1px solid #ddd;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.39), 0 -1px 1px #fff, 0 1px 0 #fff;
+  outline: 0;
+  padding: 8px 6px;
 }
 
 .error {
   color: rgb(236, 15, 15);
+}
+.errorInput {
+  border: 1.5px solid #ffdddd !important;
+  border-color: #c00000 !important;
 }
