--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -5,6 +5,7 @@ block content
     h2 Books
     p
       a(href="/books/new" class="button") Create New Book
+  include search-form
   table
     thead
       tr
@@ -17,7 +18,7 @@ block content
       each book in books
         tr
           td
-            a(href="/books/"+book.id+"/edit") #{book.title}
+            a(href="/books/"+book.id) #{book.title}
           td= book.author
           td= book.genre
           td= book.year
