--- a/views/books/new-book.pug
+++ b/views/books/new-book.pug
@@ -6,5 +6,5 @@ block content
 
     include errors
 
-  form(action="/books" method="post")
+  form(action="/books/new" method="post")
     include form
