started on search page

--- a/views/books/search-form.pug
+++ b/views/books/search-form.pug
@@ -1,4 +1,5 @@
 div(class="search")
   form(action="/books" method="post")
-    input(type="search" name="q" placeholder="What book are you looking for ...")
+    input(type="search" name="q" value=`${data.searchTerm}` placeholder="What book are you looking for ...")
     input(type="submit" value="search")
+include pagination
