started on search page

--- a/views/books/pagination.pug
+++ b/views/books/pagination.pug
@@ -1,8 +1,3 @@
-- var i = parseFloat(data.startIndex) + parseFloat(data.limit)+1;
-- var iPrevious = parseFloat(data.startIndex) - parseFloat(data.limit);
-- var cnt = data.totalCount;
-
-
 - var currP = parseFloat(data.currPage);
 - var totalPages = parseFloat(data.pageCount);
 - var nextPage = -1;
@@ -16,42 +11,16 @@ if currP !== 1
   - prevPage = currP - 1;
 
 
-if nextPage !== -1
+if nextPage !== -1 && currP && totalPages
   p
-    a(class="buttons" href=`/books/?p=${nextPage}&q=${data.searchTerm}`) next
+    a(class="buttons" href=`/books/?c=${totalPages}&p=${nextPage}&q=${data.searchTerm}`) next
 
 
-if prevPage !== -1
+if prevPage !== -1 && currP && totalPages
   p
-    a(class="buttons" href=`/books/?p=${prevPage}&q=${data.searchTerm}`) prev
-
-
-//- if iPrevious && iPrevious > 0
-//-   if parseFloat(iPrevious) < parseFloat(cnt)
-//-     p
-//-       a(class="buttons" href=`/books/?idx=${iPrevious}&q=${data.searchTerm}`) prev
-//-   else 
-//-     p
-//-       a(class="buttons" href=`/books/?idx=${iPrevious}&q=${data.searchTerm}`) prev
-
-//- if i && i <= cnt
-//-   if parseFloat(i) < parseFloat(cnt)
-//-     p
-//-       a(class="buttons" href=`/books/?idx=${i}&q=${data.searchTerm}`) next
-//-   else 
-//-     p
-//-       a(class="buttons" href=`/books/?idx=${cnt-1}&q=${data.searchTerm}`) next
-
+    a(class="buttons" href=`/books/?c=${totalPages}&p=${prevPage}&q=${data.searchTerm}`) prev
 
 p= `currPage: ${data.currPage}`
 p= `itemsPerPage: ${data.itemsPerPage}`
 p= `totalRecords: ${data.totalRecords}`
 p= `pageCount: ${data.pageCount}`
-
-//- p= `startIndex: ${data.startIndex}`
-//- p= `searchTerm: ${data.searchTerm}`
-//- p= `totalCount: ${data.totalCount}`
-//- p= `limit: ${data.limit}`
-//- p= `i: ${i}`
-//- p= `cnt: ${cnt}`
-//- p= `iPrevious: ${iPrevious}`
