--- a/views/books/search-form.pug
+++ b/views/books/search-form.pug
@@ -1,5 +1,10 @@
+- var searchTerm = '';
+
+if data.searchTerm.length > 0
+  - searchTerm = data.searchTerm;
+
 div(class="search")
   form(action="/books" method="post")
-    input(type="search" name="q" value=`${data.searchTerm}` placeholder="What book are you looking for ...")
+    input(type="search" name="q" value=`${searchTerm}` placeholder="What book are you looking for ...")
     input(type="submit" value="search")
 include pagination
