--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -109,3 +109,31 @@ input[type="text"] {
   border: 1.5px solid #ffdddd !important;
   border-color: #c00000 !important;
 }
+
+.liHorizontal {
+  display: inline;
+  margin: 13px;
+  padding: 5px;
+}
+
+.previous {
+  background-color: #aee571;
+  color: black;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+.next {
+  background-color: #76d275;
+  color: white;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.paginationLabel {
+  color: #689f38;
+}
